# slugcatpet

./: .gitignore  LICENSE  README.md  pyproject.toml  run_slugcatpet.py  slugcatpet-wayland.desktop  start.sh
slugcatpet/: _paths.py  gameassets.py  gtk3_bridge.py  i18n.py  main.py  petunit.py  window.py
slugcatpet/behavior/: __init__.py  blocking.py  desire.py  fetch.py  fsm.py  objectlooker.py  pole_climb.py  throwfetch.py  tuning.py
slugcatpet/cats/: __init__.py  base.py  hunter.py  monk.py  personality.py  stats.py  survivor.py
slugcatpet/control/: __init__.py  hotkey.py  input.py  keymap.py  mouse.py  moves.py  moves_jump.py  moves_posture.py  moves_slide.py  moves_zerog.py  session.py  vmath.py
slugcatpet/core/: __init__.py  chunkphys.py  creature.py  gfxmath.py  tail.py  units.py  water.py
slugcatpet/planning/: __init__.py  ability.py  backflip_reach.py  ceiling_reach.py  climb_reach.py  cooldown.py  executor.py  goal.py  jump_arc.py  jump_reach.py  planner.py  pole_reach.py  pyro_reach.py  tongue_hang_stay.py  tongue_reach.py  tongue_snatch.py  walk_reach.py
slugcatpet/platform/: __init__.py  cursorfx.py  envwatch.py  singleton.py  topmost.py
slugcatpet/rendering/: __init__.py  atlas.py  graphics.py  graphics_draw.py  layout.py  primitives.py
slugcatpet/ui/: __init__.py  catmenu.py  controlhud.py  dialogs.py  hud.py  hudrow.py  settings.py  setup_panel.py  tabbar.py  tips.py
slugcatpet/world/: __init__.py  batfly.py  batfly_gfx.py  bubbles.py  effects.py  enums.py  explosionfx.py  explosionfx_draw.py  fruit.py  hpole.py  items.py  lamp.py  pole.py  (+3 more)
(+22 files in other folders)
